// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About renders the About page 1`] = `
<div
  className="aboutPage"
>
  <div
    className="container-fluid"
    style={
      {
        "paddingRight": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col"
        style={
          {
            "maxWidth": "7.35in",
            "paddingRight": "4px",
            "top": "0",
          }
        }
      >
        <p
          style={
            {
              "fontSize": "18px",
              "marginBottom": "40px",
              "marginTop": "40px",
            }
          }
        >
          College Lutheran Church is located in Southwest Virginia in the beautiful city of Salem, right next to Roanoke, VA. The church is situated on College Avenue, within easy walking distance of Roanoke College. College Lutheran Church is part of the Evangelical Lutheran Church in America (ELCA).
        </p>
        <h5
          style={
            {
              "fontWeight": "bold",
              "marginTop": "35px",
            }
          }
        />
        <section
          style={
            {
              "marginBottom": "35px",
              "marginTop": "20px",
              "textAlign": "left",
            }
          }
        />
        <p
          style={
            {
              "marginBottom": "16px",
              "paddingBottom": 0,
              "paddingRight": "15px",
            }
          }
        >
          <span
            style={
              {
                "fontSize": "18px",
              }
            }
          >
             
            <strong>
              What Else is Happening at CLC?
            </strong>
          </span>
        </p>
        <p>
          Click
           
          <a
            href="/news"
          >
            News
          </a>
           
          to view or subscribe to our emails. Scroll below to view our CLC Events Calendar, and follow us on social media.
          <br />
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`About returns comments of homeContent 1`] = `
<div
  className="aboutPage"
>
  <div
    className="container-fluid"
    style={
      {
        "paddingRight": 0,
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col"
        style={
          {
            "maxWidth": "7.35in",
            "paddingRight": "4px",
            "top": "0",
          }
        }
      >
        <p
          style={
            {
              "fontSize": "18px",
              "marginBottom": "40px",
              "marginTop": "40px",
            }
          }
        >
          College Lutheran Church is located in Southwest Virginia in the beautiful city of Salem, right next to Roanoke, VA. The church is situated on College Avenue, within easy walking distance of Roanoke College. College Lutheran Church is part of the Evangelical Lutheran Church in America (ELCA).
        </p>
        <h5
          style={
            {
              "fontWeight": "bold",
              "marginTop": "35px",
            }
          }
        />
        <section
          style={
            {
              "marginBottom": "35px",
              "marginTop": "20px",
              "textAlign": "left",
            }
          }
        />
        <p
          style={
            {
              "marginBottom": "16px",
              "paddingBottom": 0,
              "paddingRight": "15px",
            }
          }
        >
          <span
            style={
              {
                "fontSize": "18px",
              }
            }
          >
             
            <strong>
              What Else is Happening at CLC?
            </strong>
          </span>
        </p>
        <p>
          Click
           
          <a
            href="/news"
          >
            News
          </a>
           
          to view or subscribe to our emails. Scroll below to view our CLC Events Calendar, and follow us on social media.
          <br />
        </p>
      </div>
    </div>
  </div>
  <div
    className="col"
  >
    <div
      id="familySlideshowWide"
      style={
        {
          "margin": "auto",
          "marginTop": "45px",
          "paddingLeft": 0,
          "paddingRight": 0,
          "textAlign": "left",
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
